--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation libs.androidx.ui.graphics
     implementation libs.androidx.ui.tooling.preview
     implementation libs.androidx.material3
+    implementation libs.androidx.navigation.compose
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
@@ -70,6 +71,10 @@ dependencies {
     //Dagger - Hilt
     implementation libs.hilt.android
     kapt libs.hilt.android.compiler
-//    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+    implementation libs.androidx.lifecycle.viewmodel.compose
     kapt libs.androidx.hilt.compiler
+    implementation libs.androidx.hilt.navigation.compose
+    implementation 'com.canopas.compose-animated-navigationbar:bottombar:1.0.1'
+
+
 }
